# delo

./: .gitignore  Cargo.toml  LICENSE  README.md  README.txt  TEST_OUTPUT.txt  delo_spec.txt  delo_syntax.txt
lox_src/: clock.rs  environment.rs  error.rs  expr.rs  interpreter.rs  lox_callable.rs  lox_function.rs  main.rs  parser.rs  resolver.rs  scanner.rs  stmt.rs  token.rs
src/: c_compiler_runner.rs  code_generator.rs  error.rs  expr.rs  main.rs  parser.rs  scanner.rs  stmt.rs  token.rs  type_checker.rs
src/ast/: expr.rs  mod.rs  stmt.rs  token.rs
src/backend/: code_generator.rs  compiler_runner.rs  mod.rs
src/frontend/: parser.rs  scanner.rs
src/type_system/: mod.rs  type_checker.rs  types.rs  unifier.rs
testing/: test_runner.rs
testing/delo_tests/1_temp/: 1_temp.delo
testing/delo_tests/1_values_and_assignment/: 1_literals.delo  1_temp.delo  2_variables.delo  3_enums.delo
testing/delo_tests/2_operators/: 1_arithmetic.delo  2_comparison_and_equality.delo  3_logical.delo  4_precedence_and_grouping.delo
testing/delo_tests/3_control_flow/: 1_if.delo  2_while.delo  3_for.delo
testing/delo_tests/4_functions/: 1_functions.delo
testing/delo_tests/5_types/: 1_type_checking.delo
testing/delo_tests/6_tuples/: 1_basics.delo
testing/delo_tests/7_time_travel/: 1_basics.delo  2_portfolio.delo  3_control_flow.delo  4_functions.delo  5_lambdas.delo
testing/lox_tests/1_values_and_assignment/: 1_literals.lox  2_variables.lox
testing/lox_tests/2_operators/: 1_arithmetic.lox  2_comparison_and_equality.lox  3_logical.lox  4_precedence_and_grouping.lox
(+4 files in other folders)
